// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavArrow /> should render with default props 1`] = `
<button
  className="mfui-nav-arrow mfui-nav-arrow_theme_purple"
  disabled={false}
  type="button"
>
  <test-file-stub
    className="mfui-nav-arrow__icon"
  />
</button>
`;

exports[`<NavArrow /> should render with props 1`] = `
<button
  className="mfui-nav-arrow mfui-nav-arrow_theme_dark class"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <test-file-stub
    className="mfui-nav-arrow__icon"
  />
</button>
`;
